# AutoMeKin

./: AUTHORS  AutoMeKin.ipynb  AutoMeKin2.ipynb  Build_Centos.sh  Build_Ubuntu.sh  Build_micromamba.sh  CITATION.cff  ChangeLog  ChangeLog.md  Gemfile  Makefile.am  Makefile.in  NEWS  README.md  _config.yml  aclocal.m4  automekin.yml  configure  configure.ac  index.md  install-gnu-parallel-from-epel.sh  install-gnu-parallel-from-source.sh  install-required-packages-centos7.sh  install-required-packages-sl7.sh  install-required-packages-ubuntu-16.4lts.sh  kp.ipynb  license.txt
.github/workflows/: pages.yml
Singularity/: Singularityg09.sh
_includes/: head.html  nav-footer-custom.html
_sass/: _variables.scss
_sass/color_schemes/: light.scss
docs/: Makefile.am  Makefile.in  README.md  analysis.md  cite.md  general.md  input.md  kinetics.md  method.md  other.md  results.md  running.md  screening.md  scripts.md  summary.md  tests.md  tutorial.md  works.md
examples/: Bz.xyz  FA.xyz  Makefile.am  Makefile.in  N2.xyz  cat.xyz  co.xyz  diels.xyz  qcore_template  qcore_template_wb97xd3  rdiels.xyz  ttors.xyz
modules/: 2021  2021ft2  Makefile.am  Makefile.in
notebooks/: AutoMeKin.ipynb  AutoMeKin2.ipynb  amk_tools.ipynb
scripts/: AMK_parameters.py  DVV.py  DVV_hl.py  FormulaPROD.sh  Heuristics.py  Integrators.py  Langevin.py  LocateTs.py  Makefile.am  Makefile.in  abort.sh  amk.sh  amk_frag.sh  amk_parallel.sh  bond_order.py  bots.py  bxde.py  check_ts_structure.sh  check_vdw_atoms.py  chemical_formula.sh  com.sh  conf_isomer_ts.sh  createMat.py  cyclic_graph.py  deg.sh  deg_form.sh  diff.sh  diffGT.sh  emax_from_temp.py  entos.py  final.sh  format.sh  format_rxnet.sh  get_NM_mopac.sh  get_freq_mopac.sh  get_geom_mopac.sh  get_geom_thermo_mopac.sh  get_minn.sh  get_minx.sh  get_ts_properties.sh  (+53 more)
scripts/HLscripts/: FINAL.sh  IDENTIFYPROD.sh  IRC.sh  IRC_ANALYSIS.sh  KMC.sh  LOCATE_BARRIERLESS.sh  MIN.sh  Makefile.am  Makefile.in  PLOT_RELEVANT.sh  PRODs.sh  REMOVE_TS.sh  RXN_NETWORK.sh  RXN_NETWORK1.sh  SORT.sh  TS.sh  TWEAK_RXNET.sh  compare_frags.sh  get_G_g09.sh  get_NM_g09.sh  get_NM_g09_molden.sh  get_ZPE_g09.sh  get_energy_g09_CCSDT.sh  get_energy_g09_DFT.sh  get_energy_g09_HF.sh  get_energy_g09_MP2.sh  get_freq_g09.sh  get_geom_g09.sh  get_geom_irc_g09.sh  get_minfminr_g09.sh  hlcalcs.sh  linked_paths.py  linked_paths.sh  makerxyz.sh  nfrag.sh  reduce_RXNet.py  runIRC.sh  runMIN.sh  runTS.sh
scripts/MOPAC_DEV/: Makefile.am  Makefile.in
share/: MD  Makefile.am  Makefile.in  atsymb  diagram_template0  diagram_template1  dynamics_template  elements  elements2  freq_template1  freq_template2  grad  grad_hl  hl_input_template  hl_input_template_notemp  hl_input_template_qm  opt  optTS  opt_frozen  opt_thermo  optfreq  optmin_hl  optts_hl  path_template  pop_template.gnu  prod_hl  scan_tors  sp_template  thermo_template  ts_templatefast  ts_templateslow
src/: Makefile.am  Makefile.in  bbfs.f90  constants.f90  constants_rrkm.f90  intern.f90  kmc.f90  kmcEND.f90  nm.f90  omegas.f90  rotate.f90  rrkm.f  sprint.f  sprint2.f  symm.f  symm0.f  termo.f90  tst.f90
src/HL/: Makefile.am  Makefile.in  diag.f
