examplesdir= $(prefix)/examples
dist_examples_DATA =assoc.dat cat.xyz co.xyz rdiels_bias.dat rdiels.xyz FA_biasH2.dat FA_biasH2O.dat \
	            FA.dat FA_external.dat FA_singletraj.dat FA.xyz FA_bxde.dat FAthermo.dat FA_HL.dat \
                    FA_2level.dat FA_programopt.dat vdW.dat Bz.xyz N2.xyz diels_bias.dat diels.xyz \
                    FA_ck.dat assoc_qcore.dat FA_bxde_qcore.dat FA_qcore.dat ttors.dat ttors.xyz  \
                    qcore_template qcore_template_wb97xd3
