
bindir= $(exec_prefix)/bin/HLscripts

dist_bin_SCRIPTS=get_energy_g09_CCSDT.sh \
	    get_energy_g09_DFT.sh get_energy_g09_HF.sh \
	    get_energy_g09_MP2.sh get_freq_g09.sh \
	    get_geom_g09.sh  get_geom_irc_g09.sh \
	    get_G_g09.sh get_minfminr_g09.sh get_NM_g09.sh \
	    get_ZPE_g09.sh IDENTIFYPROD.sh IRC_ANALYSIS.sh \
	    IRC.sh KMC.sh linked_paths.sh makerxyz.sh MIN.sh \
	    nfrag.sh PLOT_RELEVANT.sh PRODs.sh \
	    runIRC.sh runTS.sh runMIN.sh RXN_NETWORK1.sh \
	    RXN_NETWORK.sh SORT.sh TS.sh hlcalcs.sh \
            FINAL.sh get_NM_g09_molden.sh compare_frags.sh \
            reduce_RXNet.py REMOVE_TS.sh linked_paths.py \
            LOCATE_BARRIERLESS.sh

